Test/my_float2.out
Error type A at Line 3: Bad FLOAT format: ".e-4"
Error type A at Line 5: Bad FLOAT format: "1.05e"
