Test/my_float2.cmm
float __add__()
{
    .e-4;
    i = 1;
    1.05e;
}
